# progetto

./: .gitignore  README.md  app.py  chatbot_ispettore_testi.py  database_testi.json  pyproject.toml
